assignment3.2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 145.100.130.39.nip.io
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 5001
          - path: /shorten(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: url-shorten-service
                port:
                  number: 8000
